force-app/main/default/objects/SampleFood__c/SampleFood__c.object-meta.xml
<CustomObject>
    <label>실사(시식)</label>
    <nameField>
        <label>Sample Food Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>