force-app/main/default/objects/SampleFood__c/fields/isMig__c.field-meta.xml
<CustomField>
    <fullName>isMig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMig</label>
    <type>Checkbox</type>
</CustomField>