force-app/main/default/objects/SampleFood__c/fields/SalesStage__c.field-meta.xml
<CustomField>
    <fullName>SalesStage__c</fullName>
    <label>SalesStage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>시식점 선정 유도</fullName>
            </value>
            <value>
                <fullName>경쟁사 동향 파악</fullName>
            </value>
            <value>
                <fullName>시식점 사전 준비</fullName>
            </value>
            <value>
                <fullName>시식 시행</fullName>
            </value>
            <value>
                <fullName>해당없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>